[package]
name = "libp2p-community-tor-interface"
version = "0.1.0"
edition = "2021"
license = "MIT"
resolver = "2"
description = "Existing (legacy) Tor control channel/arti automatic Tor client/mock Tor transport for libp2p."
repository = "https://github.com/nabijaczleweli/libp2p-tor-interface"
authors = ["наб <nabijaczleweli@nabijaczleweli.xyz>", "umgefahren <hannes@umgefahren.xyz>"]

[dependencies]
thiserror = "1.0"
anyhow = "1.0.93"
tokio = "1.41.1"
futures = "0.3"

tor-interface = { git = "https://github.com/nabijaczleweli/gosling", rev = "65da8990e33c674ed8abeb10b454b4a39463d81d" }
libp2p = { version = "^0.56", default-features = false, features = ["tokio", "tcp", "tls"] }
# libp2p = { path = "^0.53", default-features = false, features = ["tokio", "tcp", "tls", "unix-stream"] }

tracing = "0.1.40"

[dev-dependencies]
# libp2p = { version = "0.53", default-features = false, features = ["tokio", "noise", "yamux", "ping", "macros", "tcp", "tls", "unix-stream"] }
libp2p = { version = "0.56", default-features = false, features = ["tokio", "noise", "yamux", "ping", "macros", "tcp", "tls"] }
tokio-test = "0.4.4"
tracing-subscriber = "0.2"

[features]
arti-client-tor-provider = ["tor-interface/arti-client-tor-provider"]
legacy-tor-provider      = ["tor-interface/legacy-tor-provider"]
mock-tor-provider        = ["tor-interface/mock-tor-provider"]

[[example]]
name = "ping-onion"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
